core/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

$komaLogoHeight: 33;
$komaLogoWidth: 58.5;
/* configure header */
$headerBorderWidth: .5em;
$headerBottomOffset: 37px;
$headerHeight: 190px;
$headerLeftBar: 180px;
$headerLogoHeight: 146px;
$headerLogoWidth: 245px;
$headerRightOffset: 40px;
$headerWidth: 1100px;
$footerHeight: 42px;
$mobileHeaderHeight: 30vh;
$arrowheadWidthMobile: 5vmin;
$arrowheadWidthScreen: 30px;

/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}

p + h1 {
  padding-top: 20px;
}

html {
  font-size: 12px;
}

body {
  font-feature-settings: "kern" 1;
  font-kerning: normal;
  font-family: verdana, arial, helvetica, sans-serif;
  display: grid;
  grid-template-areas:
    ". header header ."
    ". sidebar content ."
    ". footer footer .";
  grid-template-columns: 1fr $headerLeftBar auto 1fr;
  font-size: calc(min(2vw, .7rem));
}

.content {
  grid-area: content;
  min-height: calc(100vh - #{$headerHeight} - #{$footerHeight} - 40px);
  padding: 20px;
  padding-left: 24px;
  max-width: 876px;
  min-width: 200px;
  font-size: 1rem;
}

nav {
  grid-area: sidebar;
  > * {
    font-size: 1rem;
  }
}

header {
  grid-area: header;
}
footer {
  grid-area: footer;
}

/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure {
  margin-bottom: 2px;
}

/* import header */
@import "header";

/* import navigation bar */
@import "nav";

/* import footer */
@import "footer";

.content p {
  padding: 5px 0;
}

.next-koma {
  background-color: #dcdcf2;
  padding: 10px;
  margin-block: 10px;
  border-radius: 15px;
}

.next-koma ul {
  margin-top: 10px;
  margin-left: 20px;
}

.next-koma .name {
  font-weight: 800;
}

.next-koma .date {
  display: block;
}

h1 {
  font-family: Arial, sans-serif;
  font-weight: 400;
  color: #323555;
}

ul {
  /*! list-style: inside; */
  padding-bottom: 10px;
}

ul li {
  margin-left: 20px;
}

ol li {
  margin-left: 20px;
}

.packliste .task-list-item-checkbox {
  margin-right: 5px;
  width:1.2em;
  height:1.2em;
}

.site-nav {
  width: 100%;
  border-right: $headerBorderWidth solid black;
}

.site-nav ul{
  margin-right:0;
}

.site-nav ul li a{
  text-decoration: none;
  color: black;
}

@media (min-width: 800px){
  .next-koma {
    float: right;
    width: 250px;
    margin-left: 10px;
  }
}

